# behavior-triggered-outreach-engine

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: demo.py  seed_fake_data.py
src/engine/: __init__.py  cohorts.py  exclusion.py  models.py  outreach.py  personalize.py  pipeline.py  scoring.py  signals.py  store.py
tests/: test_cohorts.py
