[project]
name = "behavior-triggered-outreach-engine"
version = "0.1.0"
description = "A reference implementation of a behavior-triggered, AI-personalized PLG outreach engine (demo, synthetic data only)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "faker>=25", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8", "faker>=25", "ruff>=0.6", "mypy>=1.11"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]